# PROG-PROJET-S5-2022

./: .gitignore  ELF.c  ELF.h  Makefile.am  Makefile.in  README.md  compile  compile_tests.sh  compiler  configure  linkELF.c  oracle.c  oracle.h  oracleEtape5.py  oracle_etape5  oracle_fusion.c  oracle_fusion.h  oracle_sh  readELF.c  setup  test2.s  test5.s  test_all.sh  utils.c  utils.h
Examples_fusion/: Makefile.in  configure
Examples_fusion/autom4te.cache/: requests
tests/: oracle.c  oracle.h  test1.s  test3.s  test4.s
tests/source/: test6.s  testdata.s
